--- a/javajam.css
+++ b/javajam.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 body {
   background-color: #fcebb6;
   color: #221811;
@@ -5,23 +8,119 @@ body {
 }
 header {
   background-color: #d2b48c;
-  text-align: center;
+  height: 150px;
+  background-image: url('./image/javajamlogo.jpg');
+  background-repeat: no-repeat;
 }
 header h1 {
-  line-height: 100%;
+  font-size: 3em;
+  padding-top: 30px;
+  padding-left: 220px;
+  line-height: 200%;
 }
 nav {
   text-align: center;
   font-weight: bold;
+  font-size: 1.5em;
+  padding-top: 10px;
+  float: left;
+  width: 200px;
+}
+nav ul {
+  list-style-type: none;
+  padding-left: 0px;
+}
+nav a {
+  text-decoration: none;
+}
+nav a:link {
+  color: #fef6c2;
+}
+nav a:visited {
+  color: #d2b48c;
+}
+nav a:hover {
+  color: #cc9933;
 }
 footer {
   background-color: #d2b48c;
   font-size: small;
   font-style: italic;
   text-align: center;
+  padding-bottom: 10px;
+  border: 2px solid #221811;
 }
 #wrapper {
   width: 80%;
   margin-right: auto;
   margin-left: auto;
+  background-color: #231814;
+  min-width: 900px;
+  max-width: 1280px;
+}
+#wrapper img {
+  padding-right: 10px;
+  padding-left: 10px;
+}
+.wrapper_container {
+  display: flex;
+}
+.container {
+  display: flex;
+}
+h4 {
+  background-color: #d2b48c;
+  font-size: 1.2em;
+  padding-left: 0.5em;
+  padding-bottom: 0.25em;
+  text-transform: uppercase;
+  padding-bottom: 0;
+  border-bottom: 2px solid #221811;
+}
+main {
+  padding: 0px 0px 2em 0px;
+  margin-left: 200px;
+  background-color: #fcebb6;
+  color: #221811;
+}
+#windingroad {
+  background-image: url(./image/windingroad.jpg);
+  background-size: 100% 100%;
+  height: 250px;
+}
+#heromugs {
+  background-image: url(./image/hinhanhhoa.jpg);
+  background-size: 100% 100%;
+  height: 250px;
+}
+
+#heroguitar {
+  background-image: url(./image/heroguitar.jpg);
+  background-size: 100% 100%;
+  height: 250px;
+}
+.details {
+  padding-left: 20%;
+  padding-right: 20%;
+  overflow: auto;
+}
+header,
+nav,
+main,
+footer {
+  display: block;
+}
+main h2,
+main h3,
+main h4,
+main p,
+main div,
+main ul,
+main dl {
+  padding-left: 3em;
+  padding-right: 2em;
+}
+.floatleft {
+  float: left;
+  padding: 0px 20px 20px 0px;
 }
